Add Madras's paper

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: b8ac8abbba81c3c57f626fdb815b05457104be65
-% Date: 2023-08-03
+% Commit: 2defbf4d3296da419d2454d46abf961aa08b6f8d
+% Date: 2023-08-05
 % ---------------------------
 
 
@@ -3104,24 +3104,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {The stochastic wave equation with fractional noise: a
-		  random field approach},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {120},
-  year		= {2010},
-  number	= {12},
-  pages		= {2468--2494},
-  issn		= {0304-4149},
-  mrclass	= {60H15 (60G60 60H05)},
-  mrnumber	= {2728174},
-  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
-  doi		= {10.1016/j.spa.2010.08.006},
-  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {Stochastic heat equation with multiplicative
 		  fractional-colored noise},
   journal	= {J. Theoret. Probab.},
@@ -3136,6 +3118,24 @@
   mrreviewer	= {David Nualart},
   doi		= {10.1007/s10959-009-0237-3},
   url		= {https://doi.org/10.1007/s10959-009-0237-3}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {The stochastic wave equation with fractional noise: a
+		  random field approach},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {120},
+  year		= {2010},
+  number	= {12},
+  pages		= {2468--2494},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (60G60 60H05)},
+  mrnumber	= {2728174},
+  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
+  doi		= {10.1016/j.spa.2010.08.006},
+  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 
 @Article{	  balan.yuan:22:spatial,
@@ -15074,17 +15074,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -15100,6 +15089,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -18364,23 +18364,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18396,6 +18379,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -18584,6 +18584,25 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -18598,25 +18617,6 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -26384,24 +26384,6 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -26417,6 +26399,24 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -33394,25 +33394,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -33427,6 +33408,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -40495,6 +40495,25 @@
   url		= {https://doi.org/10.1214/14-AIHP633}
 }
 
+@Article{	  madras:14:lower,
+  author	= {Madras, Neal},
+  title		= {A lower bound for the end-to-end distance of the
+		  self-avoiding walk},
+  journal	= {Canad. Math. Bull.},
+  fjournal	= {Canadian Mathematical Bulletin. Bulletin Canadien de
+		  Math\'{e}matiques},
+  volume	= {57},
+  year		= {2014},
+  number	= {1},
+  pages		= {113--118},
+  issn		= {0008-4395},
+  mrclass	= {60G50 (60E15 82B41)},
+  mrnumber	= {3150723},
+  mrreviewer	= {Dimitri Petritis},
+  doi		= {10.4153/CMB-2012-022-6},
+  url		= {https://doi.org/10.4153/CMB-2012-022-6}
+}
+
 @Article{	  magin:10:fractional,
   author	= {Magin, Richard L.},
   title		= {Fractional calculus models of complex dynamics in
@@ -47547,21 +47566,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -47577,6 +47581,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -50884,7 +50903,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -50900,21 +50934,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -58314,6 +58333,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -58328,23 +58364,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -62255,6 +62274,23 @@
 }
 
 @Article{	  zhang:09:variational,
+  author	= {Zhang, Xicheng},
+  title		= {A variational representation for random functionals on
+		  abstract {W}iener spaces},
+  journal	= {J. Math. Kyoto Univ.},
+  fjournal	= {Journal of Mathematics of Kyoto University},
+  volume	= {49},
+  year		= {2009},
+  number	= {3},
+  pages		= {475--490},
+  issn		= {0023-608X},
+  mrclass	= {60H07 (60F10)},
+  mrnumber	= {2583599},
+  doi		= {10.1215/kjm/1260975036},
+  url		= {https://doi.org/10.1215/kjm/1260975036}
+}
+
+@Article{	  zhang:09:variational*1,
   author	= {Zhang, Tusheng},
   title		= {Variational inequalities and optimization for {M}arkov
 		  processes associated with semi-{D}irichlet forms},
@@ -62270,23 +62306,6 @@
   mrreviewer	= {Arie Leizarowitz},
   doi		= {10.1137/080737630},
   url		= {https://doi.org/10.1137/080737630}
-}
-
-@Article{	  zhang:09:variational*1,
-  author	= {Zhang, Xicheng},
-  title		= {A variational representation for random functionals on
-		  abstract {W}iener spaces},
-  journal	= {J. Math. Kyoto Univ.},
-  fjournal	= {Journal of Mathematics of Kyoto University},
-  volume	= {49},
-  year		= {2009},
-  number	= {3},
-  pages		= {475--490},
-  issn		= {0023-608X},
-  mrclass	= {60H07 (60F10)},
-  mrnumber	= {2583599},
-  doi		= {10.1215/kjm/1260975036},
-  url		= {https://doi.org/10.1215/kjm/1260975036}
 }
 
 @Article{	  zhang:10:stochastic,
