--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 2defbf4d3296da419d2454d46abf961aa08b6f8d
-% Date: 2023-08-05
+% Commit: 6e53ad4dbcade0ee0547f7fcde99dc7c8332f041
+% Date: 2023-08-06
 % ---------------------------
 
 
@@ -13646,23 +13646,7 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@InCollection{	  chen:00:on,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
-}
-
-@Article{	  chen:00:on*1,
+@Article{	  chen:00:on,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -13677,6 +13661,22 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
+}
+
+@InCollection{	  chen:00:on*1,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -18364,6 +18364,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18379,23 +18396,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -20853,21 +20853,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -20880,6 +20865,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -29720,25 +29720,7 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@Article{	  hara.slade:00:scaling,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
-}
-
-@InCollection{	  hara.slade:00:scaling*1,
+@InCollection{	  hara.slade:00:scaling,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -29757,6 +29739,24 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
+}
+
+@Article{	  hara.slade:00:scaling*1,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -33793,7 +33793,8 @@
   author	= {Isogami, Sadao and Matsushita, Mitsugu},
   title		= {Structural and Statistical Properties of Self-Avoiding
 		  Fractional Brownian Motion},
-  journal	= {Journal of the Physical Society of Japan},
+  journal	= {J. Phys. Soc. Jpn.},
+  fjournal	= {Journal of the Physical Society of Japan},
   volume	= {61},
   number	= {5},
   pages		= {1445-1448},
@@ -46612,24 +46613,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of one-dimensional {SDE}s
-		  driven by a fractional {B}rownian motion},
-  journal	= {Statist. Probab. Lett.},
-  fjournal	= {Statistics \& Probability Letters},
-  volume	= {76},
-  year		= {2006},
-  number	= {9},
-  pages		= {907--912},
-  issn		= {0167-7152},
-  mrclass	= {60G18 (60H10)},
-  mrnumber	= {2268434},
-  mrreviewer	= {Andreas Neuenkirch},
-  doi		= {10.1016/j.spl.2005.10.021},
-  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of {L}\'{e}vy processes with
 		  drift},
   journal	= {Ann. Probab.},
@@ -46644,6 +46627,24 @@
   mrreviewer	= {Tina M. Marquardt},
   doi		= {10.1214/009117905000000620},
   url		= {https://doi.org/10.1214/009117905000000620}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of one-dimensional {SDE}s
+		  driven by a fractional {B}rownian motion},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {76},
+  year		= {2006},
+  number	= {9},
+  pages		= {907--912},
+  issn		= {0167-7152},
+  mrclass	= {60G18 (60H10)},
+  mrnumber	= {2268434},
+  mrreviewer	= {Andreas Neuenkirch},
+  doi		= {10.1016/j.spl.2005.10.021},
+  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -50903,22 +50904,7 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@InCollection{	  perkins:82:local,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
-}
-
-@Article{	  perkins:82:local*1,
+@Article{	  perkins:82:local,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -50934,6 +50920,21 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
+}
+
+@InCollection{	  perkins:82:local*1,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -57093,22 +57094,6 @@
 
 @Article{	  talagrand:06:parisi,
   author	= {Talagrand, Michel},
-  title		= {Parisi measures},
-  journal	= {J. Funct. Anal.},
-  fjournal	= {Journal of Functional Analysis},
-  volume	= {231},
-  year		= {2006},
-  number	= {2},
-  pages		= {269--286},
-  issn		= {0022-1236},
-  mrclass	= {82B44 (28A33 82D30)},
-  mrnumber	= {2195333},
-  doi		= {10.1016/j.jfa.2005.03.001},
-  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-
-@Article{	  talagrand:06:parisi*1,
-  author	= {Talagrand, Michel},
   title		= {The {P}arisi formula},
   journal	= {Ann. of Math. (2)},
   fjournal	= {Annals of Mathematics. Second Series},
@@ -57122,6 +57107,22 @@
   mrreviewer	= {Fran\c{c}ois Germinet},
   doi		= {10.4007/annals.2006.163.221},
   url		= {https://doi.org/10.4007/annals.2006.163.221}
+}
+
+@Article{	  talagrand:06:parisi*1,
+  author	= {Talagrand, Michel},
+  title		= {Parisi measures},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {231},
+  year		= {2006},
+  number	= {2},
+  pages		= {269--286},
+  issn		= {0022-1236},
+  mrclass	= {82B44 (28A33 82D30)},
+  mrnumber	= {2195333},
+  doi		= {10.1016/j.jfa.2005.03.001},
+  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 
 @Article{	  talagrand:10:construction,
@@ -58333,23 +58334,6 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -58364,6 +58348,23 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
